# Gomoku-VLA

./: .gitignore  AGENTS.md  README.md  pyproject.toml  test.py
board/: __init__.py  gomoku.py
data/: human_eval_2026-06-30_21-26-25.csv  human_eval_2026-06-30_21-26-25.jsonl
docs/: alphazero_self_play.md  alphazero_training_methodology.md  architecture.md  data_collection.md  data_pipeline_visualization.html  development.md  evaluation.md  game_rules.md  human_playable_environment.md  index.md  mujoco_environment.md  roadmap.md  robot_safety.md  sim2real.md  study.md  vision.md  vla_finetuning.md
gomoku_ai/: __init__.py  encoding.py  episode_recorder.py  external_engine.py  inference.py  mcts.py  model.py  openvla_finetuning_prep.py  openvla_manifest_split.py  openvla_manifest_training.py  openvla_oft_dataset.py  replay_buffer.py  self_play.py  tactics.py  torch_model.py  train.py
robot_control/: __init__.py  safety.py
scripts/: evaluate_checkpoint.py  export_openvla_oft_dataset.py  generate_mujoco_policy_episodes.py  generate_policy_episodes.py  generate_self_play.py  human_eval_server.py  human_eval_simple_server.py  interactive_play.py  merge_episode_shards.py  play_ai_cli.py  play_cli.py  plot_training_history.py  prepare_openvla_finetuning.py  render_snapshot.py  split_openvla_manifest.py  train_alphazero.py  train_openvla_manifest.py  validate_openvla_manifest.py  validate_so101_dataset.py  view_ai_mujoco_play.py  viewer_play.py
simulation/: __init__.py  mujoco_gomoku_env.py  policy_collection.py  scripted_robot.py
tests/: test_board.py  test_vision.py  (+13 more)
(+16 files in other folders)
