[project]
name = "gomoku-vla"
version = "0.1.0"
description = "MuJoCo-based Gomoku simulation environment for VLA robot research."
requires-python = ">=3.10"
dependencies = [
  "mujoco>=3.0",
  "numpy>=1.23",
  "Pillow>=10.0",
  "matplotlib>=3.7",
  "glfw>=2.6",
]

[project.optional-dependencies]
learning = [
  "torch>=2.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.setuptools]
packages = ["board", "simulation", "gomoku_ai"]
